spec/test/parser/valid/class_structure/static_field_declaration.java
public class A {
  public A() {}
  protected static int x;
}

