spec/test/parser/invalid/class_structure/omitted_final_field_initializer.java
protected class A {
  protected final int x /* = 0 */;
}

